<resources>
    <string name="app_name">Eleventh Hour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <string name="google_server_client_id">559192445014-apr9ma2etlenvpulkqps0ed25dl8ioqe.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1707039629508587</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- SignInActivity -->
    <string name="sign_in_create_account">Create account</string>
    <string name="sign_in_forgot_password">Forgot password?</string>
    <string name="msg_sign_in_account_refresh_succeded">Your account info has been refreshed.</string>
    <string name="msg_sign_in_account_refresh_failed">We couldn\'t get latest info about your account from the server. Don\'t worry, you can try refreshing manually later.</string>

    <!-- SignInFragment -->
    <string name="sign_in_username_or_email">Username or email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_action">Sign in</string>
    <string name="msg_sign_in_wrong_credentials">Wrong username or password.</string>
    <string name="msg_sign_in_error">Sorry, we are unable to sign you in at the moment. Please try again later.</string>
    <string name="msg_sign_in_no_network">You need network access to sign in.</string>
    <string name="msg_sign_in_google_failed">Sorry, there was a problem signing you in with your Google account. Please try again later or use email sign in.</string>

    <!-- RegisterFragment -->
    <string name="register_username">Username</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_action">Create account</string>

    <!-- ForgotPasswordFragment -->
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_action">Send email</string>
    <string name="msg_forgot_password">Enter your email address and we will send you a link to reset your password.</string>

</resources>
