<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.SignInTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:theme="@style/AppTheme.SignInTheme"
    tools:background="@drawable/splash_background"
    tools:layout="@layout/activity_sign_in"
    android:id="@+id/layout_main">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_email"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_username_or_email"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:text="ranko.munk@nas2skupa.hr" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/text_password"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text="ranko123" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_sign_in"
        style="@style/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:layout_gravity="end"
        android:text="@string/sign_in_action"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/button_register"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_sign_in"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/sign_in_create_account" />

    <Button
        android:id="@+id/button_forgot_password"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_sign_in"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/sign_in_forgot_password" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@+id/button_forgot_password"
        android:layout_marginTop="16dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#d50000"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="@string/msg_sign_in_error" />
    </FrameLayout>

</RelativeLayout>
