<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:background="@drawable/splash_background"
    tools:layout="@layout/activity_sign_in">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_email"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_first_name"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_first_name"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_last_name"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_last_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_last_name"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_user_email"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_user_email"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_user_password"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_sign_in"
        style="@style/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layout_password"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/register_action" />

</RelativeLayout>
